--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -215,8 +215,8 @@
 
                 <div id="collapseDis" class="collapse" data-bs-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/Promotion">優惠券管理</a>
-                        <a class="collapse-item" href="#">成效分析</a>
+                        <a class="collapse-item" asp-controller="Promotion" asp-action="Index">優惠券管理</a>
+                        <a class="collapse-item" asp-controller="PromotionAnalysis" asp-action="Index">成效分析</a>
                     </div>
                 </div>
             </li>
