--- a/StarProject/Views/News/Edit.cshtml
+++ b/StarProject/Views/News/Edit.cshtml
@@ -91,6 +91,7 @@
                                 <option value="活動資訊">活動資訊</option>
                                 <option value="最新天象">最新天象</option>
                                 <option value="觀測公告">觀測公告</option>
+                                <option value="宇宙探索">宇宙探索</option>
                                 <option value="系統公告">系統公告</option>
                                 <option value="其他消息">其他消息</option>
                             </select>
